--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Players</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 
-    <header></header>
+    <header class="topo">
+        <div class="content flex-center-bt">
+            <img src="Imagens/logo.svg" alt="Logo escrito E-Players">
+            <nav class="menu">
+                <ul>
+                    <li> <a href="index.html">Início</a> </li>
+                    <li> <a href="#">Horários</a> </li>
+                    <li> <a href="#">Campeonatos</a> </li>
+                    <li> <a href="#">Resultados</a> </li>
+                    <li> <a href="#">Notícias</a> </li>
+                    <li> <a href="#">Login/Cadastro</a> </li>
+                </ul>
+                
+                <a href="#" id="menu-bars">
+                    <i class="fas fa-bars"></i>
+                </a>
+            </nav>
+
+        </div>
+    </header>
 
     <main></main>
 
