Banner About desktop finalizado

--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
             </div>
         </section>
 
+        <section class="about">
+            <div class="about-angulation">
+                <div class="angulation"></div>
+            </div>
+            <div class="about-position">
+                <div class="content flex-center-bt">
+                    <div class="about-text">
+                        <h2>Como participar das ligas?</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias sequi tenetur cupiditate impedit est eius, quia soluta fuga expedita repudiandae, unde eaque molestiae voluptas sunt. Voluptate eligendi velit neque minima. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non doloribus perspiciatis, sint voluptates modi illum iste excepturi veritatis enim laborum natus aperiam aut alias ut similique nulla eaque recusandae temporibus.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam nisi libero, fuga id reprehenderit culpa est voluptatibus quos. Illum harum pariatur quis porro perferendis dolorum modi ad non totam iste.</p>
+                    </div>
+                    <img src="Imagens/lol.png" alt="Herói do League of Legends">
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
