Jogos ao vivo e em breve terminados

--- a/index.html
+++ b/index.html
@@ -78,6 +78,51 @@
             </div>
         </section>
 
+        <section class="jogos">
+            <div class="content flex-center-bt">
+                <div class="jogos-aovivo flex-center-bt">
+                    <h2>Ao <br>Vivo</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>SK</p>
+                            <img src="Imagens/SK 1.png" alt="Logo do SK">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="Imagens/corinthians.png" alt="Logo do Corinthians">
+                            <p>CT</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="linha"></div>
+                <div class="jogos-embreve flex-center-bt">
+                    <h2>Em <br>breve</h2>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>SK</p>
+                            <img src="Imagens/SK 1.png" alt="Logo do SK">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="Imagens/corinthians.png" alt="Logo do Corinthians">
+                            <p>CT</p>
+                        </div>
+                    </div>
+                    <div class="partida">
+                        <div class="time1">
+                            <p>SK</p>
+                            <img src="Imagens/SK 1.png" alt="Logo do SK">
+                        </div>
+                        <p>VS</p>
+                        <div class="time2">
+                            <img src="Imagens/corinthians.png" alt="Logo do Corinthians">
+                            <p>CT</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
