Feito o rodapé com detalhe que ainda deve ser corrigido

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                                 </div>
                                 <p>VS</p>
                                 <div>
-                                    <img src="Imagens/corinthians.png" alt="Logo do Time Corinthians">
-                                    <p>Corinthians</p>
+                                    <img src="Imagens/FLA 1.png" alt="Logo do Time Flamengo">
+                                    <p>FLA</p>
                                 </div>
                             </div>
                             <p>1/12/2020 19:00</p>
@@ -202,8 +202,8 @@
                                 </div>
                                 <p>VS</p>
                                 <div>
-                                    <img src="Imagens/corinthians.png" alt="Logo do Time Corinthians">
-                                    <p>Corinthians</p>
+                                    <img src="Imagens/FLA 1.png" alt="Logo do Time Flamengo">
+                                    <p>FLA</p>
                                 </div>
                             </div>
                             <p>1/12/2020 19:00</p>
@@ -217,8 +217,8 @@
                                 </div>
                                 <p>VS</p>
                                 <div>
-                                    <img src="Imagens/corinthians.png" alt="Logo do Time Corinthians">
-                                    <p>Corinthians</p>
+                                    <img src="Imagens/FLA 1.png" alt="Logo do Time Flamengo">
+                                    <p>FLA</p>
                                 </div>
                             </div>
                             <p>1/12/2020 19:00</p>
@@ -232,8 +232,8 @@
                                 </div>
                                 <p>VS</p>
                                 <div>
-                                    <img src="Imagens/corinthians.png" alt="Logo do Time Corinthians">
-                                    <p>Corinthians</p>
+                                    <img src="Imagens/FLA 1.png" alt="Logo do Time Flamengo">
+                                    <p>FLA</p>
                                 </div>
                             </div>
                             <p>1/12/2020 19:00</p>
@@ -247,8 +247,8 @@
                                 </div>
                                 <p>VS</p>
                                 <div>
-                                    <img src="Imagens/corinthians.png" alt="Logo do Time Corinthians">
-                                    <p>Corinthians</p>
+                                    <img src="Imagens/FLA 1.png" alt="Logo do Time Flamengo">
+                                    <p>FLA</p>
                                 </div>
                             </div>
                             <p>1/12/2020 19:00</p>
@@ -262,8 +262,8 @@
                                 </div>
                                 <p>VS</p>
                                 <div>
-                                    <img src="Imagens/corinthians.png" alt="Logo do Time Corinthians">
-                                    <p>Corinthians</p>
+                                    <img src="Imagens/FLA 1.png" alt="Logo do Time Flamengo">
+                                    <p>FLA</p>
                                 </div>
                             </div>
                             <p>1/12/2020 19:00</p>
@@ -276,7 +276,49 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="rodape">
+
+        <div class="content flex-center-bt">
+            <div class="links-footer">
+                <div class="links">
+                    <h2>Links úteis</h2>
+                    <ul>
+                        <li><a href="#">Regras de utilização</a></li>
+                        <li><a href="#">Suporte</a></li>
+                        <li><a href="#">Central de ajuda</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </div>
+                <nav class="links">
+                    <h2>Páginas</h2>
+                    <ul>
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Campeonatos</a></li>
+                        <li><a href="#">Resultados</a></li>
+                        <li><a href="#">Notícias</a></li>
+                        <li><a href="#">Login/Cadastro</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <img class="logo-rodape" src="Imagens/logo.svg" alt="Logo E-Players">
+            <div class="sociais">
+                <div class="newsletter">
+                    <h2>Faça parte do nosso clã, receba notícias e promoções!</h2>
+                    <form action="#">
+                        <input type="email" name="E-mail" placeholder="E-mail">
+                        <input type="submit" value="Cadastrar">
+                    </form>
+                </div>
+                <div class="siga-nos flex-center-bt">
+                    <h2>Siga-nos em:</h2>
+                    <a href="#"><img src="Imagens/Instagram.png" alt="Logo do Instagram"></a>
+                    <a href="#"><img src="Imagens/Facebook.png" alt="Logo do Facebook"></a>
+                    <a href="#"><img src="Imagens/YouTube.png" alt="Logo do YouTube"></a>
+                </div>
+            </div>
+        </div>
+        
+    </footer>
     
 </body>
 </html>
